# stackalign

./: README.md  pyproject.toml
src/stackalign/: __init__.py  api.py  axes.py  constants.py  preparation.py
src/stackalign/backends/: __init__.py  execution.py  models.py  protocol.py  pystackreg_backend.py  transforms.py
src/stackalign/backends/cv2/: __init__.py  channel_wise.py  facade.py  time_wise.py  utils.py
src/stackalign/backends/pystackreg/: __init__.py  channel_wise.py  execution.py  facade.py  time_wise.py  utils.py
src/stackalign/backends/scikit/: __init__.py  channel_wise.py  facade.py  time_wise.py  utils.py
tests/: conftest.py  test_api_stackreg.py  test_preparation.py
tests/backends/: test_pystackreg_backend.py
tests/backends/cv2/: test_channel_wise_cv2.py  test_time_wise_cv2.py
tests/backends/pystackreg/: test_channel_wise_pyreg.py  test_time_wise_pyreg.py
tests/backends/scikit/: test_channel_wise_scikit.py  test_time_wise_scikit.py
