[project]
name = "stackalign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benoit Roux", email = "benoit.roux@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
